@@ -189,6 +189,7 @@ Release 0.9.10
   allow to access the underlying ZMAttribute instance
 - fix currency selection regression that would cause the form to post rather
   than get and thus not update the session
+- paymentSurcharge: fix spelling of setting name
 
 Release 0.9.9
 - in ZMDbTableMapper handle database exception building auto mappings
